[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/main/world/environment/turbofat-restaurant.png" type="Texture2D" id=1]
[ext_resource path="res://src/main/world/environment/restaurant/turbo-fat-restaurant.gd" type="Script" id=2]
[ext_resource path="res://src/main/utils/outline.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/main/world/environment/undecorated-turbofat-restaurant.png" type="Texture2D" id=4]
[ext_resource path="res://assets/main/world/environment/turbofat-closed-sign.png" type="Texture2D" id=5]
[ext_resource path="res://src/main/world/environment/SmokeCluster.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/main/world/environment/poof-in.wav" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/width = 1.5
shader_param/black = Color( 0.423529, 0.262745, 0.192157, 1 )
shader_param/edge_fix_factor = 1.0

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 325.999, 97.2622 )

[node name="TurboFatRestaurant" type="CharacterBody2D"]
position = Vector2( 903.99, 1070.05 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
shadow_scale = 5.5
SmokeClusterScene = ExtResource( 6 )

[node name="Restaurant" type="Sprite2D" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.539476, 0.539476 )
texture = ExtResource( 1 )
offset = Vector2( 0, -300 )

[node name="UndecoratedRestaurant" type="Sprite2D" parent="."]
visible = false
material = SubResource( 1 )
scale = Vector2( 0.539476, 0.539476 )
texture = ExtResource( 4 )
offset = Vector2( 0, -200 )

[node name="ClosedSign" type="Sprite2D" parent="."]
position = Vector2( -178, 2 )
scale = Vector2( 0.539476, 0.539476 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PoofInSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0
